# wesl-js

./: .gitignore  .gitmodules  Build-Tools.md  CLAUDE.md  EXAMPLES.md  EXAMPLES.md.jinja2  LegacyFeatures.md  README.md  agent-notes.md  cts-failing-shaders.md  next-steps-1.md  next-steps-2.md  package.json  pendulum-entropy.ipynb  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  snip.config.ts  update-examples.sh  v2-full-test-results.md  v2-integration-test-results.md  v2-progress-update-34.md  v2-progress-update.md
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/lygia-static-example/tests/lygia-static.test.ts-snapshots/: lygia-static-chromium-darwin.wgsl
examples/pendulum-entropy/: index.html  package.json  style.css  vite.config.ts
examples/pendulum-entropy/shaders/: pendulum-entropy.wesl
examples/pendulum-entropy/src/: main.ts
tools/: CLAUDE.md  package.json  pnpm-lock.yaml
tools/examples/lygia-example/tests/lygia-example.test.ts-snapshots/: lygia-example-chromium-darwin.wgsl
tools/npm-resolve-wesl/: Cargo.toml  README.md
tools/npm-resolve-wesl/src/: lib.rs  main.rs  npm_resolver.rs  package_name_utils.rs  parse.rs  resolve.rs
tools/npm-resolve-wesl/tests/: integration_test.rs  lygia_test.rs
