[package]
name = "npm-resolve-wesl"
version = "0.1.0"
edition = "2021"

[dependencies]
oxc_allocator = "0.40"
oxc_parser = "0.40"
oxc_ast = "0.40"
oxc_span = "0.40"
oxc_resolver = "11.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
flate2 = "1.0"
tar = "0.4"
ureq = "2.10"
walkdir = "2.5"
